# ChangeLog for kde-misc/krename
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/krename/ChangeLog,v 1.26 2006/02/26 16:09:01 corsair Exp $

  26 Feb 2006; Markus Rothe <corsair@gentoo.org> krename-3.0.11.ebuild:
  Added ~ppc64

*krename-3.0.11 (23 Feb 2006)

  23 Feb 2006; Carsten Lohrke <carlo@gentoo.org> +krename-3.0.11.ebuild:
  Version bump.

*krename-3.0.10 (04 Feb 2006)

  04 Feb 2006; Dominik Stadler <centic@gentoo.org> +krename-3.0.10.ebuild:
  Add new Version 3.0.10, fixes Bug 118707

  24 Dec 2005; Michael Hanselmann <hansmi@gentoo.org> krename-3.0.9.ebuild:
  Stable on ppc.

  22 Nov 2005; Marcus D. Hanwell <cryos@gentoo.org> -krename-3.0.5.ebuild,
  -krename-3.0.8.ebuild, krename-3.0.9.ebuild:
  Stable on amd64, bug 112835. Cleaned out old versions.

  19 Nov 2005; Jason Wever <weeve@gentoo.org> krename-3.0.9.ebuild:
  Stable on SPARC wrt bug #112835.

  19 Nov 2005; Mark Loeser <halcy0n@gentoo.org> krename-3.0.9.ebuild:
  Stable on x86; bug #112835

*krename-3.0.9 (19 Oct 2005)

  19 Oct 2005; Gregorio Guidi <greg_g@gentoo.org> +krename-3.0.9.ebuild:
  New version (#109787).

*krename-3.0.8 (24 Sep 2005)

  24 Sep 2005; Carsten Lohrke <carlo@gentoo.org> +krename-3.0.8.ebuild:
  version bump

  02 Sep 2005; Michael Hanselmann <hansmi@gentoo.org> krename-3.0.6.ebuild:
  Stable on ppc.

  28 Aug 2005; Marcus D. Hanwell <cryos@gentoo.org> krename-3.0.6.ebuild:
  Stable on amd64.

  20 Aug 2005; Gregorio Guidi <greg_g@gentoo.org> krename-3.0.6.ebuild:
  Stable on x86.

  13 Aug 2005; Michael Hanselmann <hansmi@gentoo.org> krename-3.0.5.ebuild:
  Stable on ppc.

  10 Aug 2005; Luis Medinas <metalgod@gentoo.org> krename-3.0.5.ebuild:
  Marked Stable on AMD64.

  27 Jun 2005; Carsten Lohrke <carlo@gentoo.org> krename-3.0.5.ebuild,
  +krename-3.0.6.ebuild:
  stable on x86

*krename-3.0.6 (27 Jun 2005)

  27 Jun 2005; Carsten Lohrke <carlo@gentoo.org> +krename-3.0.6.ebuild:
  version bump
