@@ -1,6 +1,0 @@
-MD5 1fc2024460db0717f8f337b2bd2a3d93 krename-3.0.10.tar.bz2 743521
-RMD160 a2736382eca7b7db8e9dafc3fdde3c15b1ce0895 krename-3.0.10.tar.bz2 743521
-SHA256 dbb1670bbf933542cabc8beb9df8eaead2167d1454e96e88d34b00f85fb4ba67 krename-3.0.10.tar.bz2 743521
-MD5 0e598b7acf88e80bf76fdfd22d8c7929 krename-3.0.3.pdf 640098
-RMD160 3edfc04baa5cecb8015b5616e34e8702cca54788 krename-3.0.3.pdf 640098
-SHA256 042b8345a6a346c7611ea28a772a12cb107e9c40c655ef2bf8b0fd444753c9ce krename-3.0.3.pdf 640098
