@@ -1,6 +1,0 @@
-MD5 0e598b7acf88e80bf76fdfd22d8c7929 krename-3.0.3.pdf 640098
-RMD160 3edfc04baa5cecb8015b5616e34e8702cca54788 krename-3.0.3.pdf 640098
-SHA256 042b8345a6a346c7611ea28a772a12cb107e9c40c655ef2bf8b0fd444753c9ce krename-3.0.3.pdf 640098
-MD5 a1f40501a6de4befdd564a7bc3b6e71b krename-3.0.6.tar.bz2 673815
-RMD160 4e787514af1ba44d84acf11da9fc0ec817176b9c krename-3.0.6.tar.bz2 673815
-SHA256 849facb47fe18a3ab46d5f02d0439edc8f16f2e395347fb5f438896b9d504970 krename-3.0.6.tar.bz2 673815
